Completed First Implementation - Untested

--- a/README
+++ b/README
@@ -12,3 +12,5 @@ Compile and Execute Instructions:
     4) Run "make clean" to delete any generated files.
 
     Put that space is the start smoothing key
+
+    Explain building opF in README
